# longevity_biotech_insights

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: data-refresh.md
.github/workflows/: ci.yml  huggingface-mirror.yml  weekly-data-update.yml
data/: companies_clean.csv  companies_clean.parquet  companies_raw.csv  detail_lookups.json
lbi_app/: app.py  load_abi_data.py  theme.py  wsgi.py
lbi_app/assets/: custom.css  funding_input_focus.js
lbi_app/etl/: extract.py  load.py  pipeline.py  transform.py  validate.py
lbi_app/viz/: plots.py
tests/: test_transform.py  test_validate.py
