[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longevity-biotech-insights"
version = "0.2.0"
description = "Interactive dashboard exploring the longevity biotech landscape."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Francesco Neri" }
]
dependencies = [
  "dash>=2.0",
  "dash-bootstrap-components>=1.0",
  "pandas>=2.0",
]

[project.scripts]
lbi = "lbi_app.app:main"
lbi-update = "lbi_app.etl.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lbi_app*"]
