[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longevity-biotech-insights"
version = "0.4.0"
description = "Interactive dashboard exploring the longevity biotech landscape."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Francesco Neri" }
]
dependencies = [
  "dash>=2.0",
  "dash-bootstrap-components>=1.0",
  "pandas>=2.0",
  "plotly>=6.0.0",
  "pyarrow>=12.0",
  "gunicorn>=21.2",
]

[project.optional-dependencies]
optional = [
  "pytest>=8.0",
]

[project.scripts]
lbi = "lbi_app.app:main"
lbi-update = "lbi_app.etl.pipeline:main"
lbi-validate = "lbi_app.etl.validate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lbi_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
